<resources>
    <string name="app_name">Deporte Local</string>
    <string name="football">Fútbol</string>
    <string name="FUTBOL_11">Fútbol 11</string>
    <string name="FUTBOL_7">Fútbol 7</string>
    <string name="FUTBOL_SALA">Fútbol sala</string>
    <string name="BALONCESTO">Baloncesto</string>
    <string name="VOLEIBOL">Voleibol</string>
    <string name="BALONMANO">Balonmano</string>
    <string name="UNIHOCKEY">Unihockey</string>
    <string name="favorites">Favoritos</string>

    <string name="football_11_tag">FUTBOL_11</string>
    <string name="football_7_tag">FUTBOL_7</string>
    <string name="football_sala_tag">FUTBOL_SALA</string>
    <string name="basketball_tag">BALONCESTO</string>
    <string name="volleyball_tag">VOLEIBOL</string>
    <string name="handball_tag">BALONMANO</string>
    <string name="unihockey_tag">UNIHOCKEY</string>

    <string name="snack_msg">Seleccione Voleibol, por favor.</string>
    <string name="benjamin">Benjamin</string>
    <string name="alevin">Alevin</string>
    <string name="infantil">Infantil</string>
    <string name="cadete">Cadete</string>
    <string name="juvenil">Juvenil</string>
    <string name="absoluta">Absoluta</string>
    <string name="veterano">Veterano</string>
    <string name="choose_catogory">Elige categoria</string>
    <string name="classification">Clasificación</string>
    <string name="competitions">Competiciones</string>
    <string name="calendar">Calendario</string>
    <string name="teams">Equipos</string>
    <string name="subtitle_example_category">Baloncesto</string>
    <string name="subtitle_example_competition">Baloncesto (Benjamin)</string>

    <string name="classification_position">Posición</string>
    <string name="classification_team">Equipo</string>
    <string name="classification_pj">PJ</string>
    <string name="classification_pg">PG</string>
    <string name="classification_pe">PE</string>
    <string name="classification_pp">PP</string>
    <string name="classification_f">F</string>
    <string name="classification_c">C</string>
    <string name="classification_points">Puntos</string>

    <string name="jornada_header_calendar">Jornada %1$d  (%2$s)</string>
    <string name="jornada_header">Jornada %1$d</string>

    <string name="not_implemented">Not implemented</string>
    <string name="example_team_name">Atletico Madrid</string>
    <string name="example_sport_category">Futbol (Infantil)</string>
    <string name="example_match">Jornada 5: Legamar A - Atm. Madrid</string>
    <string name="example_competition">Campeonato de Primavera</string>
    <string name="example_category">Benjamín</string>
    <string name="example_sport">Futbol 7</string>
    <string name="example_jornada">Jornada 23</string>
    <string name="example_date">12/09/2017 12:30</string>
    <string name="example_place">Mercacentro CP1</string>
    <string name="example_match_state">Pendiente</string>

    <string name="calendar_title">%1$s, Jornada %2$s: %3$s - %4$s</string>
    <string name="match_description">Competición: %1$s (%2$s - %3$s). Jornada %4$s: %5$s - %6$s. Fecha: %7$s. Lugar: %8$s (%9$s).</string>

    <string name="internet_required">Se necesita conexión a internet</string>

    <string name="NOT_FOUND">not found</string>
    <string name="municipios_disponibles">Municipios disponibles</string>
    <string name="loading_towns">cargando municipios</string>
    <string name="loading_competitions">cargando competiciones</string>
    <string name="loading_competition">cargando competición</string>
    <string name="loading_team_calendar">cargando calendar</string>
    <string name="action_preferences">Preferencias</string>
    <string name="action_changetown">Cambiar municipio</string>
    <string name="action_user_management">Gestión de usuario</string>
    <string name="action_login">Iniciar sesión</string>
    <string name="button_logout">Cerrar sesión</string>
    <string name="action_update">Actualizar (%1$s)</string>
    <string name="emptyTeamList">No hay equipos registrados para esta competición</string>
    <string name="emptyClassificationList">No hay clasificación para esta competición</string>
    <string name="emptyCalendarList">No hay calendario para esta competición</string>
    <string name="emptyCompetitionList">No hay competiciones registradas para este deporte</string>
    <string name="emptyFavCompetitionsList">No hay competiciones marcadas como favoritas</string>
    <string name="emptyFavTeamList">No hay equipos marcados como favoritos</string>
    <string name="undefined_date">(fecha sin definir)</string>
    <string name="undefined_center">(centro sin definir)</string>
    <string name="undefined_court">(pista sin definir)</string>
    <string name="undefined_week">(jornada sin definir)</string>
    <string name="undefined_match">(encuentro sin definir)</string>
    <string name="rest_team">(descansa)</string>
    <string name="match_pending">(pendiente)</string>
    <string name="match_cancel">(cancelado)</string>
    <string name="match_played">(jugado)</string>
    <string name="match_resting">(descansa)</string>
    <string name="update_competition_notification_title">Actualización: %1$s</string>
    <string name="update_competition_notification_body">Se ha registrado una actualización en la competición <b>%1$s</b> (%2$s - %3$s).</string>
    <string name="update_team_notification_title">Actualización: %1$s</string>
    <string name="update_team_notification_body">Se ha registrado una actualización que afecta al equipo <b>%1$s</b> (%2$s - %3$s).</string>
    <string name="pref_notifications_key">pref_notifications_key</string>
    <string name="pref_notifications_title">Notificationes</string>
    <string name="pref_notifications_default">true</string>
    <string name="date">Fecha:</string>
    <string name="court">Pista:</string>
    <string name="result">Resultado:</string>
    <string name="date_example">12/02/2017 12:30</string>
    <string name="court_example">La Cantera FT2</string>
    <string name="example_result">12 -  3</string>
    <string name="classification_caption">*PJ Partidos Jugados.\n*PG Partidos Ganados.\n*PE Partidos Empatados.\n*PP Partidos Perdidos.\n*PT Puntos.</string>
    <string name="sanctions_heading">Sanciones: </string>
    <string name="sanctions_team">%1$s está sancionado con %2$s puntos</string>
    <string name="sanctions_empty">No hay sanciones en esta competición.</string>
    <string name="action_mistake">Notificar error</string>
    <string name="mistake_subtitle">Si ha detectado un error en los datos puede informar al administrador del sistema enviando el siguente formulario:</string>
    <string name="mistake_title">Notificación de errores</string>
    <string name="mistake_select_sport">Deporte</string>
    <string name="mistake_select_category">Categoría</string>
    <string name="mistake_select_competition">Competición</string>
    <string name="mistake_desc">Escriba la descripción del error.</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="mistake_sent">Se ha enviado el error, será revisado por el administrador. Gracias por su colaboración.</string>

    <string name="menu_add_calendar">Añadir evento al calendario</string>
    <string name="menu_view_map">Abrir mapa</string>
    <string name="menu_share_details">Compartir</string>
    <string name="menu_notify_error">Notificar error</string>
    <string name="no_match_event">No se puede crear el evento hasta que no haya fecha.</string>
    <string name="no_match_address">Todavia no se ha definido el centro deportivo.</string>
    <string name="menu_match_title">Acciones sobre el partido</string>
    <string name="dialog_title_send_issue">Notificar error</string>
    <string name="dialog_description">Descripción del error</string>
    <string name="dialog_match_description">Jornada %1$s: %2$s - %3$s</string>
    <string name="dialog_description_empty">Por favor, indique una breve descripción del error.</string>
    <string name="dialog_issue_added">En breve revisaremos el error y será corregido, gracias por su colaboración.</string>
    <string name="dialog_issue_error">No se ha conseguido enviar la notificación.</string>
    <string name="dialog_issue_error_http">No se ha conseguido enviar la notificación. Código: %1$s</string>
    <string name="favorites_competition_added">Se añadió la competición a la lista de favoritos.</string>
    <string name="favorites_competition_removed">Se eliminó la competición de la lista de favoritos.</string>
    <string name="favorites_team_added">Se añadió el equipo a la lista de favoritos.</string>
    <string name="favorites_team_removed">Se eliminó el equipo de la lista de favoritos.</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb238882116653119</string>
    <string name="facebook_application_id" translatable="false">238882116653119</string>
    <string name="facebook_app_id">238882116653119</string>
    <string name="dialog_issue_not_allowed">Sólo usuarios logados pueden notificar errores</string>
    <string name="email_not_verified">*Necesita verificar el email</string>
    <string name="user_title">Usuario conectado</string>
    <string name="user_name">Nombre</string>
    <string name="user_email">Email</string>
    <string name="user_name_example">Antonio Diaz Arroyo</string>
    <string name="user_email_example">antonio.diaz.arroyo@gmail.com</string>
    <string name="user_validate_mail">*Email pendiente de validar.</string>
    <string name="user_sent_mail">Se envió un email para verficar que la dirección es correcta.</string>
    <string name="user_bt_send_mail">Enviar email de verificación</string>
    <string name="user_bt_close_session">Cerrar sessión</string>
    <string name="user_bt_delete_user">Borrar usuario</string>
    <string name="user_msg_session_closed">Se ha cerrado la sesión.</string>
    <string name="user_msg_user_deleted">Se ha borrado el usuario.</string>
    <string name="towns_error">En estos momentos no hay ningún muncipio disponible.</string>
</resources>
