<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activities.SportsActivity">
    <item
        android:id="@+id/action_update"
        android:title="@string/action_update"
        android:orderInCategory="1"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_preferences"
        android:orderInCategory="2"
        android:title="@string/action_preferences"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_changetown"
        android:orderInCategory="3"
        android:title="@string/action_changetown"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_login"
        android:orderInCategory="3"
        android:title="@string/action_login"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="3"
        android:title="@string/action_logout"
        app:showAsAction="never"/>
</menu>