<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_dialog_competition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:text="@string/example_competition"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tv_dialog_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/example_sport_category"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_competition"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_dialog_competition"/>

    <TextView
        android:id="@+id/tv_dialog_match"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/example_match"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_category"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_dialog_competition"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/ed_dialog_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/dialog_description"
        android:inputType="textMultiLine"
        android:lines="3"
        android:minLines="1"
        android:gravity="top|left"
        android:maxLines="4"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/tv_dialog_competition"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_match"/>

</android.support.constraint.ConstraintLayout>