<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adiaz.deportelocal.activities.LoginActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tv_title_user"
            style="@style/text_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/user_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divisor2"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_user" />


        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:contentPadding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divisor2">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.constraint.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.3" />

                <TextView
                    android:id="@+id/tv_label_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/user_name"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="TextView"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/tv_label_name"
                    tools:text="@string/user_name_example" />

                <TextView
                    android:id="@+id/tv_label_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/user_email"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    app:layout_constraintEnd_toEndOf="@id/tv_label_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_label_name" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:maxLines="2"
                    android:text="TextView"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/tv_label_email"
                    tools:text="@string/user_email_example" />

                <TextView
                    android:id="@+id/tv_validate_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/user_validate_mail"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_email" />

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/bt_close_session"
            style="@style/FirebaseUI.Button.AccountChooser.EmailButton"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="closeSession"
            android:text="@string/user_bt_close_session"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/button4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/button4"
            style="@style/FirebaseUI.Button.AccountChooser.EmailButton"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="closeSessionAndDeleteUser"
            android:text="@string/user_bt_delete_user"
            android:textAlignment="center"
            android:textColorLink="@color/colorBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />


    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>

